create common artifact